--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -61,6 +61,10 @@
                 <a href="/" class="uk-button uk-button-default uk-border-circle uk-margin-bottom uk-width-auto"
                     style="background:  #B54F00; border: solid #B54F00 2px; color: white; width: 40px; height: 40px; padding: 0;" uk-icon="icon: home"></a>
             </li>
+            <li class="uk-active Btn">
+                <button class="uk-button uk-button-default uk-border-circle uk-margin-bottom uk-width-auto"
+                    style="background:  #B54F00; border: solid #B54F00 2px; color: white; width: 40px; height: 40px; padding: 0;" uk-icon="icon: location"></button>
+            </li>
 
         </ul>
     </div>
